[package]
name = "trace"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
flate2 = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
indicatif = "0.18"
tracing-indicatif = "0.3"
tempfile = "3"
